--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "element-ui": "^2.11.0",
         "export-from-json": "^1.1.4",
         "moment": "^2.24.0",
+        "v-mask": "^2.0.2",
         "vue-echarts": "^4.0.3",
         "vue-router": "^3.0.7",
         "vuex": "^3.1.1"
