--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "gregwar/php-serial": "dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mike42/escpos-php": "^2.1",
