--- a/parking.service
+++ b/parking.service
@@ -1,13 +1,12 @@
 [Unit]
 Description=Parking controller service
-After=network.target
-After=apache2.service
+Requires=network.target
 
 [Service]
 User=root
-ExecStart=/etc/init.d/parking start
-ExecStop=/etc/init.d/parking stop
+ExecStart=/home/yogya/apps/parking-system/parking.py
 Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
