add set sudah keluar semua update api untuk take snapshot

--- a/parking.service
+++ b/parking.service
@@ -1,3 +1,8 @@
+# taruh di /etc/systemd/system
+# systemctl daemon-reload
+# systemctl enable parking
+# systemctl start parking
+
 [Unit]
 Description=Parking controller service
 Requires=network.target
