--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "gregwar/php-serial": "dev-master",
         "guzzlehttp/guzzle": "^6.3",
+        "ifsnop/mysqldump-php": "^2.8",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mike42/escpos-php": "^2.1",
