--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.1",
-    "export-from-json": "^1.3.4",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
-    "v-mask": "^2.0.2",
-    "nuxt": "^2.4.5"
+    "export-from-json": "^1.3.4",
+    "nuxt": "^2.4.5",
+    "v-mask": "^2.0.2"
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0"
   }
 }
