--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "element-ui": "^2.15.2",
-    "nuxt": "^2.15.7"
+    "export-from-json": "^1.3.4",
+    "nuxt": "^2.15.7",
+    "v-mask": "^2.0.2"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2"
   }
