--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "sass-loader": "^10.2.0"
   }
 }
