--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,16 @@
     "@nuxtjs/auth-next": "*",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "echarts": "^5.1.2",
     "element-ui": "^2.15.2",
     "export-from-json": "^1.3.4",
     "nuxt": "^2.15.7",
-    "v-mask": "^2.0.2"
+    "v-mask": "^2.2.4",
+    "vue-echarts": "^6.0.0"
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.6.1",
+    "@vue/composition-api": "^1.1.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
     "sass-loader": "^10.2.0"
