--- a/package.json
+++ b/package.json
@@ -10,27 +10,14 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "element-ui": "^2.11.0",
-        "export-from-json": "^1.1.4",
-        "moment": "^2.24.0",
-        "tailwindcss": "^1.8.10",
-        "v-mask": "^2.0.2",
-        "vue-echarts": "^4.0.3",
-        "vue-router": "^3.0.7",
-        "vuex": "^3.1.1"
+        "tailwindcss": "^1.8.10"
     }
 }
