--- a/queue.service
+++ b/queue.service
@@ -3,8 +3,8 @@ Description=Parking Queue Service
 Requires=network.target
 
 [Service]
-User=server
-WorkingDirectory=/home/server/apps/parking-system
+User=www-data
+WorkingDirectory=/home/[user]/apps/parking-system
 ExecStart=/usr/bin/php artisan queue:work
 Restart=always
 RestartSec=3
