--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
-        "doctrine/dbal": "^3.1",
+        "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.9",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "gregwar/php-serial": "dev-master",
         "guzzlehttp/guzzle": "^7.0.1",
         "ifsnop/mysqldump-php": "^2.8",
-        "laravel/framework": "^8.0",
-        "laravel/helpers": "^1.4",
-        "laravel/sail": "^1.9",
+        "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.0",
-        "mike42/escpos-php": "^2.1"
+        "laravel/tinker": "^2.5",
+        "mike42/escpos-php": "^2.1",
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.11",
@@ -43,12 +42,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
