--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vue-echarts": "^6.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/composition-api": "^0.29.2",
     "@nuxtjs/moment": "^1.6.1",
     "@vue/composition-api": "^1.1.1",
     "eslint-config-prettier": "^8.3.0",
