--- a/.env-prod
+++ b/.env-prod
@@ -13,11 +13,11 @@ DB_DATABASE=parking_system
 DB_USERNAME=parking_system
 DB_PASSWORD="Bismillah1@#$%"
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=10080
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -42,3 +42,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
