--- a/.env-prod
+++ b/.env-prod
@@ -44,3 +44,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
+CLOUD_SERVER_URL=http://report.palangparkirsemarang.com
