--- a/composer.json
+++ b/composer.json
@@ -8,26 +8,24 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.1",
         "beyondcode/laravel-websockets": "^1.9",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
         "gregwar/php-serial": "dev-master",
         "guzzlehttp/guzzle": "^7.0.1",
         "ifsnop/mysqldump-php": "^2.8",
-        "laravel/framework": "^8.54",
-        "laravel/sanctum": "^2.11",
+        "laravel/framework": "^10.0",
+        "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.5",
         "mike42/escpos-php": "^2.1",
-        "pusher/pusher-php-server": "~4.0"
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.11",
+        "spatie/laravel-ignition": "^2.0",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.1",
-        "phpunit/phpunit": "^9.0",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.0",
         "fakerphp/faker": "^1.9.1"
     },
     "config": {
@@ -52,7 +50,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
