--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "beyondcode/laravel-websockets": "^1.9",
+        "php": "^8.2",
         "gregwar/php-serial": "dev-master",
         "guzzlehttp/guzzle": "^7.0.1",
         "ifsnop/mysqldump-php": "^2.8",
-        "laravel/framework": "^10.0",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^11.0",
+        "laravel/reverb": "@beta",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.5",
         "mike42/escpos-php": "^2.1",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
         "fakerphp/faker": "^1.9.1"
     },
