--- a/nuxt3-fe/package.json
+++ b/nuxt3-fe/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@devindex/vue-mask": "^2.0.3",
     "@pinia/nuxt": "^0.5.1",
     "echarts": "^5.5.0",
     "export-from-json": "^1.7.4",
     "laravel-echo": "^1.16.1",
+    "moment": "^2.30.1",
     "nuxt": "^3.11.2",
     "nuxt-auth-sanctum": "^0.3.1",
     "pinia": "^2.1.7",
