--- a/nuxt3-fe/package.json
+++ b/nuxt3-fe/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@devindex/vue-mask": "^2.0.3",
+    "@element-plus/icons-vue": "^2.3.1",
     "@pinia/nuxt": "^0.5.1",
     "echarts": "^5.5.0",
     "export-from-json": "^1.7.4",
-    "laravel-echo": "^1.16.1",
     "moment": "^2.30.1",
     "nuxt": "^3.11.2",
     "nuxt-auth-sanctum": "^0.3.1",
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@element-plus/nuxt": "^1.0.9",
-    "element-plus": "^2.7.2"
+    "element-plus": "^2.7.2",
+    "laravel-echo": "^1.16.1",
+    "pusher-js": "^8.4.0-rc2"
   }
 }
