--- a/serial_controller/package.json
+++ b/serial_controller/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "aplay": "^1.2.0",
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.5",
-    "mysql2": "^3.10.1",
-    "sequelize": "^6.37.3",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-serialport": "^3.0.0-alpha.4",
+    "escpos-usb": "^3.0.0-alpha.4",
     "serialport": "^12.0.0"
   }
 }
