--- a/gate-controller/package.json
+++ b/gate-controller/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "run": "node --watch app.js",
+        "start": "node --watch app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
